# AviSynth-FCBI

./: CHANGELOG.md  CMakeLists.txt  readme.md
msvc/: FCBI.sln  FCBI.vcxproj  FCBI.vcxproj.filters
src/: fcbi.cpp  fcbi.h  fcbi.rc  fcbi_avs.cpp  fcbi_c.cpp  fcbi_sse2.cpp  fcbi_vs.cpp
